Source code with reporting

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,13 @@ dist.jar=${dist.dir}/LozadaGroupCompany.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.8.0.jar=src\\Library\\commons-beanutils-1.8.0.jar
+file.reference.commons-collections-3.2.1.jar=src\\Library\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=src\\Library\\commons-digester-2.1.jar
+file.reference.commons-javaflow-20060411.jar=src\\Library\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.1.jar=src\\Library\\commons-logging-1.1.1.jar
+file.reference.jasperreports-5.6.0.jar=src\\Library\\jasperreports-5.6.0.jar
+file.reference.jdt-compiler-3.1.1.jar=src\\Library\\jdt-compiler-3.1.1.jar
 file.reference.mysql-connector-java-8.0.17.jar=dep\\mysql-connector-java-8.0.17.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -37,7 +44,14 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.mysql-connector-java-8.0.17.jar}
+    ${file.reference.mysql-connector-java-8.0.17.jar}:\
+    ${file.reference.jasperreports-5.6.0.jar}:\
+    ${file.reference.commons-beanutils-1.8.0.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.jdt-compiler-3.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
