--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,21 +37,21 @@ file.reference.commons-javaflow-20060411.jar=src\\Library\\commons-javaflow-2006
 file.reference.commons-logging-1.1.1.jar=src\\Library\\commons-logging-1.1.1.jar
 file.reference.jasperreports-5.6.0.jar=src\\Library\\jasperreports-5.6.0.jar
 file.reference.jdt-compiler-3.1.1.jar=src\\Library\\jdt-compiler-3.1.1.jar
-file.reference.mysql-connector-java-8.0.17.jar=dep\\mysql-connector-java-8.0.17.jar
+file.reference.mysql-connector-java-8.0.22.jar=dep\\mysql-connector-java-8.0.22.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.mysql-connector-java-8.0.17.jar}:\
     ${file.reference.jasperreports-5.6.0.jar}:\
     ${file.reference.commons-beanutils-1.8.0.jar}:\
     ${file.reference.commons-collections-3.2.1.jar}:\
     ${file.reference.commons-digester-2.1.jar}:\
     ${file.reference.commons-javaflow-20060411.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
-    ${file.reference.jdt-compiler-3.1.1.jar}
+    ${file.reference.jdt-compiler-3.1.1.jar}:\
+    ${file.reference.mysql-connector-java-8.0.22.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
