--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ file.reference.commons-collections-3.2.1.jar=src\\Library\\commons-collections-3
 file.reference.commons-digester-2.1.jar=src\\Library\\commons-digester-2.1.jar
 file.reference.commons-javaflow-20060411.jar=src\\Library\\commons-javaflow-20060411.jar
 file.reference.commons-logging-1.1.1.jar=src\\Library\\commons-logging-1.1.1.jar
+file.reference.DateChooser.jar=C:\\Users\\Administrator\\Documents\\NetBeansProjects\\ProjectManagementPlus\\src\\source\\DateChooser.jar
 file.reference.jasperreports-5.6.0.jar=src\\Library\\jasperreports-5.6.0.jar
 file.reference.jdt-compiler-3.1.1.jar=src\\Library\\jdt-compiler-3.1.1.jar
 file.reference.mysql-connector-java-8.0.22.jar=dep\\mysql-connector-java-8.0.22.jar
@@ -51,7 +52,8 @@ javac.classpath=\
     ${file.reference.commons-javaflow-20060411.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.jdt-compiler-3.1.1.jar}:\
-    ${file.reference.mysql-connector-java-8.0.22.jar}
+    ${file.reference.mysql-connector-java-8.0.22.jar}:\
+    ${file.reference.DateChooser.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
