--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -21,8 +21,12 @@ compile.on.save.unsupported.javafx=true
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
 dist.jar=${dist.dir}/extrace.jar
@@ -30,10 +34,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-beanutils-1.8.0.jar=../../../Library/Java/commons-beanutils-1.8.0.jar
+file.reference.commons-codec-1.11.jar=F:\\SlicksoftCoder\\Library\\Java\\commons-codec-1.11.jar
 file.reference.commons-collections-3.2.1.jar=../../../Library/Java/commons-collections-3.2.1.jar
 file.reference.commons-digester-2.1.jar=../../../Library/Java/commons-digester-2.1.jar
-file.reference.commons-logging-1.1.1.jar=../../../Library/Java/commons-logging-1.1.1.jar
+file.reference.commons-logging-1.2.jar=F:\\SlicksoftCoder\\Library\\Java\\commons-logging-1.2.jar
 file.reference.DateChooser.jar-1=../../../Library/Java/DateChooser.jar
+file.reference.gson-2.8.7.jar=F:\\SlicksoftCoder\\Library\\Java\\gson-2.8.7.jar
 file.reference.jasperreports-5.6.0.jar-1=../../../Library/Java/jasperreports-5.6.0.jar
 file.reference.jcommon-1.0.15.jar=../../../Library/Java/jcommon-1.0.15.jar
 file.reference.jdt-compiler-3.1.1.jar=../../../Library/Java/jdt-compiler-3.1.1.jar
@@ -50,13 +56,17 @@ javac.classpath=\
     ${file.reference.commons-beanutils-1.8.0.jar}:\
     ${file.reference.commons-collections-3.2.1.jar}:\
     ${file.reference.commons-digester-2.1.jar}:\
-    ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.jcommon-1.0.15.jar}:\
     ${file.reference.jdt-compiler-3.1.1.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.commons-codec-1.11.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.gson-2.8.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.modulepath=
+javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -64,6 +74,8 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -126,9 +138,13 @@ run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
     ${build.classes.dir}
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
